[tool.poetry]
name = "pipen-filters"
version = "0.10.1"
description = "Add a set of useful filters for pipen templates"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen-filters"
repository = "https://github.com/pwwang/pipen-filters"

[tool.poetry.dependencies]
python = "^3.8"
pipen = "^0.12"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"
pytest-asyncio = "^0"
python-slugify = "^8.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pipen]
filters = "pipen_filters:PipenFilters"

[tool.pytest.ini_options]
addopts = "-vv -W error::UserWarning --cov-config=.coveragerc --cov=pipen_filters --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
