[tool.poetry]
name = "pipen-filters"
version = "1.1.0"
description = "Add a set of useful filters for pipen templates"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen-filters"
repository = "https://github.com/pwwang/pipen-filters"

[tool.poetry.dependencies]
python = "^3.9"
pipen = {version = "1.1.*", allow-prereleases = true}

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-rtd = "^0.0.14"
pymdown-extensions = "^10.8.1"
mkapi-fix = "^0.1.1"

[tool.poetry.group.dev.dependencies]
google-cloud-storage = "^3"
pytest = "^8"
pytest-cov = "^5"
pytest-asyncio = "^0"
python-slugify = "^8"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins.pipen]
filters = "pipen_filters:PipenFilters"

[tool.pytest.ini_options]
addopts = "-vv -W error::UserWarning --cov-config=.coveragerc --cov=pipen_filters --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
